force-app/main/default/objects/Program_Deliverable__c/Program_Deliverable__c.object-meta.xml
<CustomObject>
    <label>Program Deliverable</label>
    <nameField>
        <displayFormat>PD-{0000000}</displayFormat>
        <label>Program Deliverables Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Deliverables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>