force-app/main/default/objects/Program_Deliverable__c/fields/Deliverable_Definition__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Definition__c</fullName>
    <label>Deliverable Definition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>