force-app/main/default/objects/Program_Deliverable__c/fields/Deliverable_Type__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Type__c</fullName>
    <label>Deliverable Type</label>
    <type>TextArea</type>
</CustomField>