force-app/main/default/objects/Program_Deliverable__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Program Deliverables</relationshipLabel>
    <relationshipName>Program_Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>